WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302553
[text-wrap][pretty] Fix incorrect index in InlineContentConstrainer hyphenation fallback
https://bugs.webkit.org/show_bug.cgi?id=302553
Summary
[text-wrap][pretty] Fix incorrect index in InlineContentConstrainer hyphenati...
Yulun Wu
Reported
2025-11-14 15:20:56 PST
rdar://164680038
Attachments
Add attachment
proposed patch, testcase, etc.
Yulun Wu
Comment 1
2025-11-14 19:59:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53982
EWS
Comment 2
2025-11-17 11:48:47 PST
Committed
303130@main
(44bd78d54f85): <
https://commits.webkit.org/303130@main
> Reviewed commits have been landed. Closing PR #53982 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug