Cherry-pick 1ba13fd5f322. rdar://164901509

Cherry-pick 44bd78d54f85. rdar://164901509

        [text-wrap][pretty] Fix incorrect index in InlineContentConstrainer hyphenation fallback
        https://bugs.webkit.org/show_bug.cgi?id=302553
        <rdar://164680038>

        Reviewed by Alan Baradlay.

        This PR fixes a bug where the hyphenation fallback was using the wrong
        starting inline item position. We should use:

        breakOpportunities[lastValidStateIndex]

        to correctly look up the actual inline item index from
        the break opportunities array.

        This PR also adds bounds checks before accessing the arrays.

        Combined changes:
        * LayoutTests/fast/css3-text/css3-text-wrap/text-wrap-pretty-line-break-crash-4-expected.txt: Added.
        * LayoutTests/fast/css3-text/css3-text-wrap/text-wrap-pretty-line-break-crash-4.html: Added.
        * LayoutTests/fast/css3-text/css3-text-wrap/text-wrap-pretty-line-break-crash-5-expected.txt: Added.
        * LayoutTests/fast/css3-text/css3-text-wrap/text-wrap-pretty-line-break-crash-5.html: Added.
        * Source/WebCore/layout/formattingContexts/inline/InlineContentConstrainer.cpp:
        (WebCore::Layout::InlineContentConstrainer::prettifyRange):

        Canonical link: https://commits.webkit.org/303130@main

    Canonical link: https://commits.webkit.org/301765.327@safari-7623.1.14.10-branch

Canonical link: https://commits.webkit.org/301765.314@safari-7623.1.14.11-branch