Source/WebCore/layout/formattingContexts/inline/InlineContentConstrainer.cpp
@@ -626,7 +626,18 @@ std::optional<Vector<LayoutUnit>> InlineContentConstrainer::prettifyRange(Inline
         // Try to find a solution using hyphenation.
         if (firstStartIndex>lastValidStateIndex.value()) {
             // Perform a single line layout from lastValidStateIndex.value().
-            auto newEntry = layoutSingleLineForPretty({ breakOpportunities[state[lastValidStateIndex.value()].lineEnd.index], range.endIndex() }, idealLineWidth, state[lastValidStateIndex.value()], lastValidStateIndex.value());
+
+            // Sanity check indices before proceeding.
+            if (lastValidStateIndex.value() >= breakOpportunities.size()) {
+                ASSERT_NOT_REACHED_WITH_SECURITY_IMPLICATION();
+                return { };
+            }
+            if (lastValidStateIndex.value() >= state.size()) {
+                ASSERT_NOT_REACHED_WITH_SECURITY_IMPLICATION();
+                return { };
+            }
+
+            auto newEntry = layoutSingleLineForPretty({ breakOpportunities[lastValidStateIndex.value()], range.endIndex() }, idealLineWidth, state[lastValidStateIndex.value()], lastValidStateIndex.value());
             auto it = std::ranges::find(breakOpportunities, newEntry.lineEnd.index);
             // If hyphenation does not create a valid solution, we should return early.
             if (it == breakOpportunities.end())
